--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:9d92c224e05c9803ef9e58da813bbad993731aac7c522ce2ddfcafbc367a50e2"
+  "signature": "sha256:113f1dc61264531992d91b6822b0453922baf477789b8d77942fccb1624f606c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -66,7 +66,9 @@
       "## Topics\n",
       "* Root finding\n",
       "* Interpolation\n",
-      "* Curve building"
+      "* Curve building\n",
+      "\n",
+      "$\\renewcommand{bs}{\\boldsymbol}$"
      ]
     },
     {
@@ -1809,28 +1811,10 @@
       }
      },
      "source": [
-      "## Bootstrap\n",
+      "## Triangular dependency\n",
       "\n",
-      "$\\renewcommand{bs}{\\boldsymbol}$\n",
       "The objective:\n",
-      "* build a curve in hazard rate $\\bs h(t)$ that exactly reprice all observed CDS prices quoted in $\\bs q(t)$\n",
-      "* or equivalently, we could build the curve in cumulative hazard $\\bs g(t)$.\n",
-      "\n",
-      "Bootstrap is the standard method to build curves in quatitative finance\n",
-      "* Solve the knot values one by one, using benchmark instruments in the increasing order of their maturities"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "subslide"
-      }
-     },
-     "source": [
-      "## Why bootstrap?\n",
-      "* the dependency is triangular, because of non-zero coupons:\n",
-      "\n",
+      "* build a curve in hazard rate $\\bs h(t)$ that exactly reproduce all observed CDS prices quoted in $\\bs q(t)$\n",
       "\n",
       "| |$h(3m)$|$h(6m)$|$h(1Y)$|$h(2Y)$|$h(5Y)$|\n",
       "|:----:|:----:| :----: | :----: | :----: | :----: | :----: |\n",
@@ -1838,7 +1822,10 @@
       "|$q(6m)$| * | * | | | | \n",
       "|$q(1Y)$| * | * | * | | | \n",
       "|$q(2Y)$| * | * | * | * | | \n",
-      "|$q(5Y)$| * | * | * | * | * |"
+      "|$q(5Y)$| * | * | * | * | * |\n",
+      "\n",
+      "Bootstrap is the standard method to build curves with triangular dependency:\n",
+      "* Solve the knot values one by one, using benchmark instruments with increasing maturities"
      ]
     },
     {
