--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:113f1dc61264531992d91b6822b0453922baf477789b8d77942fccb1624f606c"
+  "signature": "sha256:06eca46879e63b3b4ebddb3d7ac7dfb9f547191405f118a4a83227386329167f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2044,7 +2044,7 @@
       }
      },
      "source": [
-      "Bootsrap with tension spline"
+      "Bootstrap with tension spline"
      ]
     },
     {
