--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:06eca46879e63b3b4ebddb3d7ac7dfb9f547191405f118a4a83227386329167f"
+  "signature": "sha256:1135b0220b2618a7e665434c9a64924e54f2ae214fcfbe023beb14df5d665610"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2204,6 +2204,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Iteration is an effective method for near triangular dependency:\n",
+      "\n",
       "$$\\bs x^{i+1} = f(\\bs x^i)$$\n",
       "\n",
       "* where $f(\\cdot)$ represent the bootstrap operation, $\\bs x^i$ is knot solutions\n",
@@ -2232,7 +2234,11 @@
       "title('L-2 norm of error (bps)');"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
