--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:1135b0220b2618a7e665434c9a64924e54f2ae214fcfbe023beb14df5d665610"
+  "signature": "sha256:131256c2197773b66e18b003e153e74996fee5f53facafa9edb8fa5402daa291"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2214,6 +2214,32 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "subslide"
+      }
+     },
+     "source": [
+      "## Iteration with mixing"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "Mixing the old and new results between iterations improves stability:\n",
+      "\n",
+      "$$\\bs x^{i+1} = m f(\\bs x^i) + \\left(1-m\\right) \\bs x^i$$\n",
+      "\n",
+      "* $m = 0.5$ is the default choice"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -2250,18 +2276,6 @@
       }
      ],
      "prompt_number": 31
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "-"
-      }
-     },
-     "source": [
-      "Mixing the old and new results between iterations improves stability:\n",
-      "* $\\bs x^{i+1} = m f(\\bs x^i) + \\left(1-m\\right) \\bs x^i$, $m = 0.5$ a common choice"
-     ]
     },
     {
      "cell_type": "markdown",
