--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:131256c2197773b66e18b003e153e74996fee5f53facafa9edb8fa5402daa291"
+  "signature": "sha256:ea7f7e8e5d23c686fea262867d798eae2cc341bb70d2bcda66727bdfaf8cd9b3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2262,7 +2262,7 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "subslide"
+       "slide_type": "-"
       }
      },
      "outputs": [
