--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:158c36658cc03f71f125275f6a8ada7d286db057ecf081c76178a17aec89d93d"
+  "signature": "sha256:345cf8fb27a2719a9844c9147e3ebb4b6d328064792a6f687f15b5c259b68195"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2016,7 +2016,7 @@
      },
      "source": [
       "How to remove the discontinuity in hazard rate?\n",
-      "* apply cubic spline to hazard rate seems to be a natural idea, but does it work?"
+      "* applying cubic spline to hazard rate seems to be a natural idea, does it work?"
      ]
     },
     {
@@ -2109,7 +2109,7 @@
       "\n",
       "The benchmark CDS won't reprice exactly after the bootstrapping with tension spline:\n",
       "* Changes in longer maturity affects the shorter end of the curve\n",
-      "* The dependency matrix is no longer triangular\n"
+      "* The dependency matrix is no longer triangular, but close\n"
      ]
     },
     {
@@ -2274,7 +2274,7 @@
       "\n",
       "$$\\bs x^{i+1} = m f(\\bs x^i) + \\left(1-m\\right) \\bs x^i$$\n",
       "\n",
-      "* $m = 0.5$ is the default choice"
+      "* $m = 0.5$ is often a good choice"
      ]
     },
     {
@@ -2392,7 +2392,7 @@
       "## Perturbation locality\n",
       "\n",
       "Changes in hazard rates are more localized with larger $\\lambda$\n",
-      "* A highly sought after property in practice"
+      "* A highly desirable property in practice"
      ]
     },
     {
