--- a/Lecture4.ipynb
+++ b/Lecture4.ipynb
@@ -19,7 +19,7 @@
    "version": "2.7.6"
   },
   "name": "",
-  "signature": "sha256:345cf8fb27a2719a9844c9147e3ebb4b6d328064792a6f687f15b5c259b68195"
+  "signature": "sha256:c2e77b237ab98ec9887390ffe0ae7da49ba320e4406a6dab5778121066e83a36"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2033,7 +2033,7 @@
       "\n",
       "$$g(t) = \\int_0^t h(s) ds = -\\log(p(t))$$\n",
       "\n",
-      "* $g(t)$ is continuous and monotonic\n",
+      "* $g(t)$ is continuous and monotonic, 1 to 1 with $p(t)$\n",
       "* $g(0) = 0$, the boundary condition is well defined\n",
       "* $h(t) = g'(t)$ can be discountinous when $\\lambda \\rightarrow \\infty$, this reverts to the standard method of piecewise flat hazard rate\n",
       "* with finite $\\lambda$, hazard rate is smooth and continuous\n",
