--- a/Homework5.ipynb
+++ b/Homework5.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:91811935c664c97eb3625615d390c85cfc4ed1b24913ae85e1b45c1699990718"
+  "signature": "sha256:b6156af52686e7c103b5aacd167d6f67c41c1b298c53b719f2cefe79b2435fbf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -138,14 +138,15 @@
      "metadata": {},
      "source": [
       "1. use the tension spline routine from previoius homework to build a tension spline of zero rate term structure $r(t)$ with $\\lambda = 5$, you can assume $r(0) = 0$ if needed. Note that we are interpolating the zero rate instead of the cumulative yield here.\n",
-      "2. suppose the liquid market securities (the benchmarks) are 3M deposit (equivalent to zero coupon bond), and swaps paying semi-annual coupons with maturities matching the CMT quotes tenors;  use the curve you built to price these benchmark securities, assuming the deposits are quoted by the continous yield and swaps are quoted in break even spreads.\n",
-      "3. use your bootstrap functions from the previous homework/lecture to bootstrap the zero rate curve from benchmark quotes from #2, show that the resulting curve is identical to the curve from #1.\n",
+      "2. suppose the liquid market securities (the benchmarks) are 3M deposit (equivalent to zero coupon bond), and swaps paying semi-annual coupons with maturities matching the CMT quotes tenors;  use the curve you built to price these benchmark securities, assuming the deposits are quoted by the continous yield (zero rate) and swaps are quoted in break even spreads (par swap spreads).\n",
+      "3. use your bootstrap functions from the previous homework/lecture to bootstrap the zero rate curve from benchmark quotes from #2, show that the resulting curve is identical to the curve from #1. \n",
       "4. You have an aged receiver swap (receiving fixed) on the book with $100M notional, 6Y of remaining maturity and 5% semi-annual fixed coupon. Compute its deltas and hedge notionals to the benchmark instruments by bumping the market quotes of benchmark instruments (ie, deposit and swaps) and re-bootstrapping the IR curve, record the computation time for hedge notionals.\n",
       "5. Suppose your system only computes the risks to the zero rates, compute the risk of the aged trade to zero rates, and the Jacobian matrix and use them to compute the hedge notionals, compare the results and computation time to the previous step. \n",
       "\n",
       "Hint:\n",
       "* you can use the swap.py library from last homework to price swaps.\n",
-      "* please pay attention to the compounding, there are multiple compounding in this problem: all the zero rates are continuously compounded, the swaps pays coupon semi-annually, therefore the par swap quotes should be priced using the correct coupon frequency. The first deposit is quoted by yield (zero rate), therefore it is countinously compounded."
+      "* please pay attention to the compounding, there are multiple compounding in this problem: all the zero rates are continuously compounded, the swaps pays coupon semi-annually, therefore the par swap quotes should be computed using the correct coupon frequency. The first deposit is quoted by yield (zero rate), which is countinuously compounded.\n",
+      "* The 3M deposit is equivalent to a 3M swap in risk profile, therefore, you may replace the 3M deposit by a quarterly par swap maturing at 3M as the first benchmark instruments during the bootstrap. It may ease the coding, as you can re-use the same swap pricer. But beware the par swap rate is different from continuous compounded zero rate, thus a proper conversion is required."
      ]
     },
     {
@@ -168,40 +169,367 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Problem 3\n",
-      "You now have four hedging portfolios from problem 1, a) a full hedging portfolio using all benchmark instruments b) a partial hedging portfolio that only use the 3 liquid swaps in the hedging portfolio of a, and keeping their notional unchanged, c) use only the three liquid instruments, and minimize the L-2 norm of the hedged risks d) same as c, but minimize the variance of daily PnL.\n",
+      "### Solution\n",
+      "\n",
+      "1: The optimal hedges that minimize the L-2 norm of the risks, their effectiveness will be shown in the next problem."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "hi_idx = np.array([2, 5, 7])\n",
+      "j = jacobian.iloc[hi_idx,:]\n",
+      "\n",
+      "print \"Jacobian of liquid instruments:\"\n",
+      "fmt.displayDF(j*1e4, \"3g\")\n",
+      "\n",
+      "print \"Optimal Hedges:\"\n",
+      "h1 = pd.DataFrame(-np.linalg.inv(j.dot(j.T)).dot(j).dot(deltas_r)*notional, index=j.index, columns=['Hedge Notional']).T\n",
+      "fmt.displayDF(h1, \"3g\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Jacobian of liquid instruments:\n"
+       ]
+      },
+      {
+       "html": [
+        "<center><font size=2><table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Pert 0.25Y</th>\n",
+        "      <th>Pert 0.5Y</th>\n",
+        "      <th>Pert 1Y</th>\n",
+        "      <th>Pert 2Y</th>\n",
+        "      <th>Pert 3Y</th>\n",
+        "      <th>Pert 5Y</th>\n",
+        "      <th>Pert 7Y</th>\n",
+        "      <th>Pert 10Y</th>\n",
+        "      <th>Pert 20Y</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Swap @t=1</th>\n",
+        "      <td>        0</td>\n",
+        "      <td>-0.00065</td>\n",
+        "      <td> -0.999</td>\n",
+        "      <td>1.11e-12</td>\n",
+        "      <td>      0</td>\n",
+        "      <td>1.11e-12</td>\n",
+        "      <td>      0</td>\n",
+        "      <td>        0</td>\n",
+        "      <td>       0</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Swap @t=5</th>\n",
+        "      <td>-0.000218</td>\n",
+        "      <td>-0.00304</td>\n",
+        "      <td>-0.0162</td>\n",
+        "      <td> -0.0274</td>\n",
+        "      <td>-0.0906</td>\n",
+        "      <td>   -4.67</td>\n",
+        "      <td>0.00293</td>\n",
+        "      <td>-0.000106</td>\n",
+        "      <td>1.01e-06</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>Swap @t=10</th>\n",
+        "      <td>-0.000277</td>\n",
+        "      <td> -0.0039</td>\n",
+        "      <td>-0.0206</td>\n",
+        "      <td> -0.0358</td>\n",
+        "      <td> -0.111</td>\n",
+        "      <td>   -0.19</td>\n",
+        "      <td> -0.374</td>\n",
+        "      <td>    -8.26</td>\n",
+        "      <td> 0.00139</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table></font></center>"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.HTML at 0xde1da58>"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Optimal Hedges:\n"
+       ]
+      },
+      {
+       "html": [
+        "<center><font size=2><table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Swap @t=1</th>\n",
+        "      <th>Swap @t=5</th>\n",
+        "      <th>Swap @t=10</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Hedge Notional</th>\n",
+        "      <td>-3.2e+06</td>\n",
+        "      <td>-7.11e+07</td>\n",
+        "      <td>-4.38e+05</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table></font></center>"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.HTML at 0xde1d9b0>"
+       ]
+      }
+     ],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "2: the optimal hedges that minimize the variance:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print \"the co-variance matrix of daily zero rates changes (in bps)\"\n",
+      "\n",
+      "cov = (cmt_rates*1e4).diff()[1:].cov()\n",
+      "fmt.displayDF(cov, \"2f\")\n",
+      "\n",
+      "print \"Optimal Hedges:\"\n",
+      "h2 = pd.DataFrame(-np.linalg.inv(np.dot(j, cov).dot(j.T)).dot(np.dot(j, cov).dot(deltas_r*notional)), \n",
+      "                  index=j.index, columns=['Hedge Notional']).T\n",
+      "fmt.displayDF(h2, \"4g\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "the co-variance matrix of daily zero rates changes (in bps)\n"
+       ]
+      },
+      {
+       "html": [
+        "<center><font size=2><table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>0.25</th>\n",
+        "      <th>0.5</th>\n",
+        "      <th>1</th>\n",
+        "      <th>2</th>\n",
+        "      <th>3</th>\n",
+        "      <th>5</th>\n",
+        "      <th>7</th>\n",
+        "      <th>10</th>\n",
+        "      <th>20</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0.25</th>\n",
+        "      <td>28.31</td>\n",
+        "      <td>17.94</td>\n",
+        "      <td>14.46</td>\n",
+        "      <td>12.16</td>\n",
+        "      <td>11.79</td>\n",
+        "      <td>10.67</td>\n",
+        "      <td> 9.27</td>\n",
+        "      <td> 7.97</td>\n",
+        "      <td> 5.86</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>0.5</th>\n",
+        "      <td>17.94</td>\n",
+        "      <td>19.24</td>\n",
+        "      <td>16.50</td>\n",
+        "      <td>15.76</td>\n",
+        "      <td>15.64</td>\n",
+        "      <td>14.65</td>\n",
+        "      <td>13.19</td>\n",
+        "      <td>11.65</td>\n",
+        "      <td> 9.11</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td>14.46</td>\n",
+        "      <td>16.50</td>\n",
+        "      <td>20.80</td>\n",
+        "      <td>22.07</td>\n",
+        "      <td>22.28</td>\n",
+        "      <td>21.43</td>\n",
+        "      <td>19.74</td>\n",
+        "      <td>17.61</td>\n",
+        "      <td>14.19</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td>12.16</td>\n",
+        "      <td>15.76</td>\n",
+        "      <td>22.07</td>\n",
+        "      <td>32.97</td>\n",
+        "      <td>33.41</td>\n",
+        "      <td>33.14</td>\n",
+        "      <td>31.14</td>\n",
+        "      <td>27.94</td>\n",
+        "      <td>22.81</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td>11.79</td>\n",
+        "      <td>15.64</td>\n",
+        "      <td>22.28</td>\n",
+        "      <td>33.41</td>\n",
+        "      <td>37.05</td>\n",
+        "      <td>37.06</td>\n",
+        "      <td>35.34</td>\n",
+        "      <td>32.04</td>\n",
+        "      <td>26.61</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>5</th>\n",
+        "      <td>10.67</td>\n",
+        "      <td>14.65</td>\n",
+        "      <td>21.43</td>\n",
+        "      <td>33.14</td>\n",
+        "      <td>37.06</td>\n",
+        "      <td>41.07</td>\n",
+        "      <td>39.87</td>\n",
+        "      <td>36.75</td>\n",
+        "      <td>31.43</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>7</th>\n",
+        "      <td> 9.27</td>\n",
+        "      <td>13.19</td>\n",
+        "      <td>19.74</td>\n",
+        "      <td>31.14</td>\n",
+        "      <td>35.34</td>\n",
+        "      <td>39.87</td>\n",
+        "      <td>41.33</td>\n",
+        "      <td>38.10</td>\n",
+        "      <td>33.52</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>10</th>\n",
+        "      <td> 7.97</td>\n",
+        "      <td>11.65</td>\n",
+        "      <td>17.61</td>\n",
+        "      <td>27.94</td>\n",
+        "      <td>32.04</td>\n",
+        "      <td>36.75</td>\n",
+        "      <td>38.10</td>\n",
+        "      <td>37.09</td>\n",
+        "      <td>32.81</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>20</th>\n",
+        "      <td> 5.86</td>\n",
+        "      <td> 9.11</td>\n",
+        "      <td>14.19</td>\n",
+        "      <td>22.81</td>\n",
+        "      <td>26.61</td>\n",
+        "      <td>31.43</td>\n",
+        "      <td>33.52</td>\n",
+        "      <td>32.81</td>\n",
+        "      <td>32.00</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table></font></center>"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.HTML at 0xdf0c588>"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Optimal Hedges:\n"
+       ]
+      },
+      {
+       "html": [
+        "<center><font size=2><table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Swap @t=1</th>\n",
+        "      <th>Swap @t=5</th>\n",
+        "      <th>Swap @t=10</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>Hedge Notional</th>\n",
+        "      <td>-5.301e+05</td>\n",
+        "      <td>-9.728e+07</td>\n",
+        "      <td>-1.825e+07</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table></font></center>"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "<IPython.core.display.HTML at 0xa7404a8>"
+       ]
+      }
+     ],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## (Extra Credit) Problem 3\n",
+      "You now have four hedging portfolios from problem 1, a) a full hedging portfolio using all benchmark instruments b) a partial hedging portfolio that only use the 3 liquid swaps in the hedging portfolio of a, and keeping their notional the same as a, c) use only the three liquid instruments, and minimize the L-2 norm of the hedged risks d) same as c, but minimize the variance of daily PnL.\n",
       "\n",
       "Now you want to compare the performance of these four hedging strategies, and make a recommendation to your head trader. What your head trader cares the most is to minimize the daily PnL of the hedged portfolios under the following common market scenarios:\n",
       "\n",
       "1. rough parallel moves in quoted spread, which is the most common mode of movement in the market; the daily rates movements are typically only a few basis points, however, the daily rates movements can be as big as 20bps or more in turmoil market.\n",
       "2. how the hedges performs if the curve become steeper of flatter.\n",
-      "3. In addition, your head trader wants to know the hedged risk profiles and the projected daily PnL standard deviations with the hedges,\n",
+      "3. In addition, your head trader wants to know the hedged risk profiles and the projected daily PnL volatiity (standard deviation) with the hedges,\n",
       "\n",
       "You can use other metrics to help justify your recommendation of the best hedging strategy. You should include the unhedged trade as a reference in your analysis.\n",
       "\n",
-      "Hint: You certainly could directly perscribe the scenarios according to your head trader's description, but it is better to come up an objective and data driven way to define these common parallel moves and curve steepener/flatteners scenarios. Something we learnt in lecture 3 can be useful here,"
+      "Hint: You certainly could directly perscribe the scenarios according to your head trader's description, but it is better to come up an objective and historical data driven way to define these common parallel moves and curve steepener/flatteners scenarios. "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Problem 4 (Optional)\n",
+      "## (Extra credit) Problem 4 \n",
       " \n",
       "The Brownian bridge method can be easily extended to multi-dimensional correlated Brownian motions. Assuming we have two browniam motion $x(t), y(t)$ with a correlation of 50%,\n",
       "\n",
       "1. write a program to construct correlated Brownian Bridge from the given terminal values, correlation matrix and time increments, note that here you need to draw correlated Gaussian random numbers to perserve the correlation of the Brownian Bridge increments.\n",
       "2. draw multiple paths from different terminal values and verify that the correlation of the increments of your Brownian Bridge is indeed 50%. Note that the terminal values can be drawn directly using the covariance matrix, which is known. \n",
       "3. suppose that you forgot about the correlation and used independent Gaussian random numbers in step 1, and have drawn the Brownian Bridges using correlated terminal values, but independent increments; Plot the resulting terminal value correlation between $\\rho\\left(x(t), y(t)\\right)$ of the resulting Brownian Bridge over time $t$, explain your observation."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "## Problem 5 (Optional)\n",
-      "\n",
-      "Verify the order of accuracy in numerical integration using rectangular, trapezoidal and simpson rules. Choose a function whose integration is known analytically, then compute the same numerically using quadrature rules, and show the relastionship between error and the sample sizes mathes those presented in the lecture notes. Please feel free to use the numerical integration routine in ```scipy.integrate``` for this exercise. If you get unexpected results, try to explain why."
      ]
     }
    ],
