--- a/Lecture6_2016.ipynb
+++ b/Lecture6_2016.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:77776fb72601d43d57d77245534d97d48db56fe37a9d5792e5da201bb8eee93a"
+  "signature": "sha256:876e3a92ceb30a0f6568341a87a9adca9f73b013c670725c0c49b343f94298fc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -853,7 +853,7 @@
       "\n",
       "* Will be focusing on smooth functions (typically at least twice differentable). \n",
       "\n",
-      "* The goal is to find a local minimum satisfying the constriants.\n",
+      "* The goal is to find a local minimum satisfying the constraints.\n",
       "\n",
       "* And we will denote the feasible region as domain \n",
       "$\\mathcal{D} = \\{\\bx \\in \\mathbb{R}^n | \\; \\bs{h}(\\bx)  = \\bs{0}, \\; \\bs{g}(\\bx) \\leq \\bs{0}\\}$.\n",
@@ -894,7 +894,7 @@
       "$$\n",
       "\n",
       "\n",
-      "* The dual function takes the pointwise infimum of a family of affine functions of $(\\bmu, \\bld)$, it is a concave function.\n",
+      "* The dual function takes the pointwise infimum of a family of affine functions in $(\\bmu, \\bld)$, it is a concave function.\n",
       "\n"
      ]
     },
