Minor changes to Lect 7

--- a/Lecture7_2016.ipynb
+++ b/Lecture7_2016.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:78f2adaa012900b592ea4c5edfe84b232135fe7df297475a92ff0627ab1438d8"
+  "signature": "sha256:4bc6a73fdcd304791765f750d13a714a8ada0d6b2bdd2a369e3159b865510548"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -292,9 +292,9 @@
      },
      "source": [
       "\n",
-      "* Chapter 2 of the Reference book has very simple and clear example showing the Simplex Method\n",
+      "* Chapter 2 of the Reference book has a very clear example showing steps of the Simplex Method\n",
       "\n",
-      "* Chapters 6 and 8 present a very good knowledge base of how Simplex method are implemented\n"
+      "* Chapters 6 and 8 present a very good knowledge base of how the Simplex method is implemented\n"
      ]
     },
     {
