--- a/Lecture7_2016.ipynb
+++ b/Lecture7_2016.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:4bc6a73fdcd304791765f750d13a714a8ada0d6b2bdd2a369e3159b865510548"
+  "signature": "sha256:51925cb90b23448919c5d74b042b801f8916a3c266a68bc840729606584d85b7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -475,7 +475,7 @@
       "\\begin{matrix}\n",
       "\\bs{0} \\\\\n",
       "\\bs{0} \\\\\n",
-      "-\\bs{X} \\bs{S} \\bs{e} + \\tau\\gamma \\bs{e}\n",
+      "\\tau\\gamma \\bs{e}\n",
       "\\end{matrix}\n",
       "\\right] \\hspace{2in} (*)\n",
       "\\end{matrix}\n",
