--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -1085,7 +1085,7 @@
       "\n",
       "Cox-Ingersoll-Ross (CIR) process:\n",
       "\n",
-      "$$dx(t) = \\kappa(\\bar x - x(t)) dt + \\sigma \\sqrt{x(t)} dw(t)$$\n",
+      "$$dx(t) = \\kappa(x(t) - \\bar x) dt + \\sigma \\sqrt{x(t)} dw(t)$$\n",
       "\n",
       "* $x(t) \\ge 0$, zero is attainable if $\\sigma^2 > 2\\kappa\\bar x$ \n",
       "* no known analytical solution for $x(t)$\n",
@@ -1108,7 +1108,7 @@
       "\n",
       "A better solution to prevent CIR process from becoming negative is to apply the transformation $y(t) = \\log(x(t))$:\n",
       "\n",
-      "$$\\small dy(t) = \\frac{1}{x(t)}\\left(\\kappa(\\bar x - x(t)) - \\frac{\\sigma^2}{2} \\right) dt + \\frac{\\sigma}{\\sqrt{x(t)}}dw(t) $$\n",
+      "$$\\small dy(t) = \\frac{1}{x(t)}\\left(\\kappa(x(t) - \\bar x) - \\frac{\\sigma^2}{2} \\right) dt + \\frac{\\sigma}{\\sqrt{x(t)}}dw(t) $$\n",
       "\n",
       "* Euler scheme can then be applied to sample $y(t)$, without added bias\n",
       "* it can be easiliy extended to sample any bounded processes\n",
@@ -1135,7 +1135,7 @@
       " \n",
       "where $\\dot u_s = \\frac{du(x_s)}{dx_s}, \\dot \\sigma_s = \\frac{du(\\sigma_s)}{dx_s}$.\n",
       " \n",
-      "All corrections are higher order than $\\delta t$ except the $dw_s dw_t$ term (note $t < u < s < t+\\delta t$):\n",
+      "All corrections are higher order than $d t$ except the $dw_s dw_t$ term (note $t < u < s < t+\\delta t$):\n",
       " \n",
       "$$ \\delta x_t = u_t \\delta t + \\sigma_t \\delta w_t + \\int_t^{t+\\delta t}\\int_t^{s}\\dot\\sigma_u \\sigma_s dw_u dw_s $$"
      ]
@@ -2454,8 +2454,6 @@
       "\n",
       "Homework:\n",
       "\n",
-      "* Work on our project\n",
-      "  * you now have the knowledge to complete 75% of the modelling work in your project\n",
       "* Complete [homework set 6](http://yadongli.github.io/nyumath2048)"
      ]
     }
