--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:15bbc363feba96106e9ee283c38b6a225aa5a8896d20fbe423df4f9d069d8058"
+  "signature": "sha256:98537ea1c4a36f628883e41c32bf89789c83550460b70e5462cd938462989470"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2350,8 +2350,7 @@
      "source": [
       "# Assignment\n",
       "\n",
-      "* Work on your project\n",
-      "* Please shoot high, consider the Control Variate or Importance Sampling."
+      "* Complete homework set 7"
      ]
     }
    ],
