--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -1174,7 +1174,7 @@
       "\n",
       "Therefore, if we sample $\\delta w_t = \\tilde z \\sqrt{\\delta t}$, we add the following correction term:\n",
       " \n",
-      "$$\\delta x = u(t) \\delta t + \\sigma(t) \\sqrt{\\delta t} \\tilde z + \\sigma \\dot \\sigma (\\tilde z^2 - 1) \\delta t $$\n",
+      "$$\\delta x = u(t) \\delta t + \\sigma(t) \\sqrt{\\delta t} \\tilde z + \\frac{1}{2}\\sigma \\dot \\sigma (\\tilde z^2 - 1) \\delta t $$\n",
       "\n",
       "* Milstein sampling is 1st order in strong convergence and weak convergence\n",
       "* But it is non-trivial to extend Milstein to multi-dimensional "
