--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:98537ea1c4a36f628883e41c32bf89789c83550460b70e5462cd938462989470"
+  "signature": "sha256:7685a9f5ae90b212f2f2984b2bce66433df47804a644a2e0c50d10efba8c6008"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2348,9 +2348,15 @@
       }
      },
      "source": [
-      "# Assignment\n",
+      "# Assigment\n",
       "\n",
-      "* Complete homework set 7"
+      "Recommented reading:\n",
+      "\n",
+      "* Andersen and Piterbarg: Chapter 3.3-3.4\n",
+      "\n",
+      "Homework:\n",
+      "\n",
+      "* Complete [homework set 7](http://yadongli.github.io/nyumath2048)"
      ]
     }
    ],
