correction - credit to Oksana Kitaychik

--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -1133,7 +1133,7 @@
       " \n",
       "$$ d u_s = (\\cdot) ds + \\dot u_s \\sigma_s dw_s,  \\;\\; d\\sigma_s = (\\cdot) ds + \\dot \\sigma_s \\sigma_s dw_s $$\n",
       " \n",
-      "where $\\dot u_s = \\frac{du(x_s)}{dx_s}, \\dot \\sigma_s = \\frac{du(\\sigma_s)}{dx_s}$.\n",
+      "where $\\dot u_s = \\frac{du(x_s)}{dx_s}, \\dot \\sigma_s = \\frac{d\\sigma(x_s)}{dx_s}$.\n",
       " \n",
       "All corrections are higher order than $d t$ except the $dw_s dw_t$ term (note $t < u < s < t+\\delta t$):\n",
       " \n",
