--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -1152,12 +1152,12 @@
       "$$ \\small \\begin{eqnarray}\n",
       "\\sigma_t\\int_t^{t+\\delta t}\\int_t^{s}\\dot\\sigma_u dw_u dw_s &\\approx& \\sigma_t\\dot\\sigma_u \\int_t^{t+\\delta t}\\int_t^{s} dw_u dw_s\n",
       "= \\sigma_t\\dot\\sigma_t \\int_t^{t+\\delta t} (w_{s}-w_t)dw_s \\\\\n",
-      "&=& \\sigma_t\\dot\\sigma_t \\left(\\int_t^{t+\\delta t} w_{s}dw_s - \\int_t^{t+dt}w_t dw_s\\right) \\\\\n",
+      "&=& \\sigma_t\\dot\\sigma_t \\left(\\int_t^{t+\\delta t} w_{s}dw_s - \\int_t^{t+\\delta t}w_t dw_s\\right) \\\\\n",
       "&=& \\sigma_t\\dot\\sigma_t \\left(\\int_t^{t+\\delta t} w_{s}dw_s - w_t(w_{t+\\delta t} - w_t)\\right)\n",
       "\\end{eqnarray}$$\n",
       " \n",
       "Note that $\\int w_t dw_t = \\frac{1}{2}(w_t^2 - t)$, the term in the bracket becomes:\n",
-      "$$ \\small \\frac{1}{2} (w_{t+\\delta t}^2 - w_t^2) - \\frac{1}{2}\\delta t - w_t(w_{t+\\delta t} - w_t) - dt = \\frac{1}{2}(w_{t+\\delta t} - w_t)^2 - \\frac{\\delta t}{2} \\approx \\frac{1}{2}(\\delta^2w - \\delta t) $$\n",
+      "$$ \\small \\frac{1}{2} (w_{t+\\delta t}^2 - w_t^2) - \\frac{1}{2}\\delta t - w_t(w_{t+\\delta t} - w_t) - \\del= \\frac{1}{2}(w_{t+\\delta t} - w_t)^2 - \\frac{\\delta t}{2} \\approx \\frac{1}{2}(\\delta^2w - \\delta t) $$\n",
       " \n",
       "This term vanishes for infinitesimal $dt$ but not for finited sample size $\\delta t$. "
      ]
