--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -1157,7 +1157,7 @@
       "\\end{eqnarray}$$\n",
       " \n",
       "Note that $\\int w_t dw_t = \\frac{1}{2}(w_t^2 - t)$, the term in the bracket becomes:\n",
-      "$$ \\small \\frac{1}{2} (w_{t+\\delta t}^2 - w_t^2) - \\frac{1}{2}\\delta t - w_t(w_{t+\\delta t} - w_t) - \\del= \\frac{1}{2}(w_{t+\\delta t} - w_t)^2 - \\frac{\\delta t}{2} \\approx \\frac{1}{2}(\\delta^2w - \\delta t) $$\n",
+      "$$ \\small \\frac{1}{2} (w_{t+\\delta t}^2 - w_t^2) - \\frac{1}{2}\\delta t - w_t(w_{t+\\delta t} - w_t) = \\frac{1}{2}(w_{t+\\delta t} - w_t)^2 - \\frac{\\delta t}{2} \\approx \\frac{1}{2}(\\delta^2w - \\delta t) $$\n",
       " \n",
       "This term vanishes for infinitesimal $dt$ but not for finited sample size $\\delta t$. "
      ]
