--- a/Homework11.ipynb
+++ b/Homework11.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4ec8f03dfd0805a45af3dc82d939ece1dcbe8649863e4f75715e31d51465e631"
+  "signature": "sha256:316a46102fd503af6ced5f2ccd6fb9aaa53ea3a1eb10f57eb8b59cf4ff45296e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Homework Set 8"
+      "# Homework Set 11"
      ]
     },
     {
@@ -55,20 +55,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Problem 2\n",
+      "## Problem 2:\n",
       "\n",
-      "* Derive the CFL condition for the Crank-Nicholson method for the Black-Scholes PDE, assuming $r=0$.\n",
-      "\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "## Problem 3\n",
-      "\n",
-      "* Implement the FDM for Black-Scholes PDE using the Crank-Nicolson Scheme and test your code using the same example in Lecture 13 for both the vanilla European Call and the Up-and-out Barrier Call.\n",
-      "\n"
+      "* Build a python program based on \"odeint\" to solve the above ODE for different $\\lambda $ values. Provide at least two cases that show  different behavior of the solution based on the stiffness of the problem.\n",
+      "     \n",
+      "   "
      ]
     }
    ],
